Fix sidebar alignment and doc spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,8 +13,13 @@ td {
     vertical-align: top;
 }
 
+.sidebar {
+    vertical-align: super;
+}
+
 .wrapper {
     max-width: 950px;
+    margin-top: 20px;
 }
 
 .contacts a {
